Updated Italian translation.
2007-02-08  Luca Ferretti  <elle.uca@libero.it>

	* it.po: Updated Italian translation.


svn path=/trunk/; revision=12734

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-08  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Updated Italian translation.
+
 2007-02-07  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>
 
 	* ca.po: Updated Catalan translation.
