--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-8  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Updated Arabic Translation by Khaled Hosny.
+
 2007-02-08  Luca Ferretti  <elle.uca@libero.it>
 
 	* it.po: Updated Italian translation.
