--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-11  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* fr.po: Updated French translation by Jonathan Ernst.
+
 2007-02-09  David Lodge <dave@cirt.net>
 
 	* en_GB.po: Updated English (British) translation
