--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-02-12  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
+	Bump to 2.17.91
+
+	* NEWS:
+	Update for release
+
 2007-02-06  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
@@ -72,6 +80,8 @@
 	* nautilus-file-management-properties.desktop.in.in:
 	Move File Management capplet to PersonalSettings.
 
+=== nautilus 2.17.90 ===
+	
 2007-01-22  Alexander Larsson  <alexl@redhat.com>
 
 	* NEWS: 
