--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Major changes in 2.17.91 are:
+* Change file management capplet category
+* Avoid showing "empty" in the tree while loading directory
+* Prompt for empty trash on unmount
+* Capitalize lin" in "Link to ..." names
+* Fix crashes and memory leaks
+
 Major changes in 2.17.90 are:
 * Add nautilus_file_info_get_activation_uri for extensions
 * Zero-pad seconds in progress display
