Post release version bump
2007-02-12  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump

=== nautilus 2.17.91 ===


svn path=/trunk/; revision=12742

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 2007-02-12  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
+	Post release version bump
+
+=== nautilus 2.17.91 ===
+	
+2007-02-12  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
 	Bump to 2.17.91
 
 	* NEWS:
