--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-12  Ilkka Tuohela  <hile@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+
 === nautilus 2.17.91 ===
 	
 2007-02-11  Alexander Shopov  <ash@contact.bg>
