--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-12  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Translation updated.
+
 2007-02-12  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
