--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-15  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated Portuguese translation.
+
 2007-02-12  Gabor Kelemen  <kelemeng@gnome.hu>
 
 	* hu.po: Translation updated.
