--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2007-02-17  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
+
+	reviewed by: <delete if not using a buddy>
+
+	* pt_BR.po:
+
 2007-02-16  Takeshi AIHANA <takeshi.aihana@gmail.com>
 
 	* ja.po: Updated Japanese translation.
