--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,8 +1,6 @@
 2007-02-17  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>
 
-	reviewed by: <delete if not using a buddy>
-
-	* pt_BR.po:
+	* pt_BR.po: Updated Brazilian Portuguese translation.
 
 2007-02-16  Takeshi AIHANA <takeshi.aihana@gmail.com>
 
