--- a/po/ja.po
+++ b/po/ja.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus trunk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-02-16 23:06+0900\n"
-"PO-Revision-Date: 2007-02-16 23:06+0900\n"
+"POT-Creation-Date: 2007-02-18 22:20+0900\n"
+"PO-Revision-Date: 2007-02-18 22:17+0900\n"
 "Last-Translator: Takeshi AIHANA <takeshi.aihana@gmail.com>\n"
 "Language-Team: Japanese <gnome-translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
@@ -4715,7 +4715,7 @@ msgstr "デフォルトのズームレベル(_Z):"
 
 #: ../src/nautilus-file-management-properties.glade.h:47
 msgid "Display"
-msgstr "表示"
+msgstr "アイテム"
 
 #: ../src/nautilus-file-management-properties.glade.h:48
 msgid "File Management Preferences"
@@ -4949,8 +4949,8 @@ msgstr "移動:"
 #, c-format
 msgid "Do you want to view %d location?"
 msgid_plural "Do you want to view %d locations?"
-msgstr[0] "%d 個の場所を表示しますか？"
-msgstr[1] "%d 個の場所を表示しますか？"
+msgstr[0] " %d個の場所を表示しますか？"
+msgstr[1] " %d個の場所を表示しますか？"
 
 #: ../src/nautilus-location-dialog.c:156
 msgid "Open Location"
@@ -5149,7 +5149,7 @@ msgstr "ブックマーク編集ウィンドウを表示します"
 #: ../src/nautilus-navigation-window-menus.c:446
 #: ../src/nautilus-spatial-window.c:866
 msgid "_Search for Files..."
-msgstr "いろいろなファイルを検索します(_S)..."
+msgstr "ファイルの検索(_S)..."
 
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:447
