--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-18  Ole Laursen  <olau@hardworking.dk>
+
+	* da.po: Fixed a problem reported by Armijn Hemel, also updated
+	the translation with the few new strings.
+
 2007-02-18  Priit Laes  <plaes@svn.gnome.org>
 
 	* et.po: Updated Estonian translation by Ivar Smolin <okul@linux.ee>.
