--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2007-02-19  Alexander Larsson  <alexl@redhat.com>
+
+        * src/nautilus-pathbar.c:
+	Don't display homedir as desktop in pathbar when
+	in home-as-desktop mode. (#368661)
+	Patch from John Millikin
+
 2007-02-12  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
