--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-02-20  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file-operations.c:
+	Fix for C89 compilers. (#407150)
+	Patch from Jens Granseuer
+
 2007-02-19  Christian Persch  <chpe@svn.gnome.org>
 
 	* configure.in:
