--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-20  Leonid Kanter <leon@asplinux.ru>
+
+	* ru.po: Updated Russian translation
+
 2007-02-18  Ole Laursen  <olau@hardworking.dk>
 
 	* da.po: Fixed a problem reported by Armijn Hemel, also updated
