--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-21  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Dutch translation updated by Reinout van Schouwen.
+	
 2007-02-21  Artur Flinta  <aflinta@cvs.gnome.org>
 
 	* pl.po: Updated Polish translation by GNOME PL Team.
