Ellipsise the filename column in list view mode, and make it expand so it
2007-02-21  Christian Persch  <chpe@svn.gnome.org>

	* src/file-manager/fm-list-view.c: (create_and_set_up_tree_view):
	Ellipsise the filename column in list view mode, and make it expand so
	it doesn't just show "...". Bug #408155.

svn path=/trunk/; revision=12761

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-02-21  Christian Persch  <chpe@svn.gnome.org>
+
+	* src/file-manager/fm-list-view.c: (create_and_set_up_tree_view):
+	Ellipsise the filename column in list view mode, and make it expand so
+	it doesn't just show "...". Bug #408155.
+
 2007-02-20  Christian Persch  <chpe@svn.gnome.org>
 
 	* libnautilus-private/nautilus-file-operations-progress.c:
