--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-22  Abel Cheung  <abelcheung@gmail.com>
+
+	* zh_CN.po: Updated simplified Chinese translation on behalf of
+	Funda Wang.
+
 2007-02-21  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Dutch translation updated by Reinout van Schouwen.
