--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-22  Gintautas Miliauskas  <gintas@akl.lt>
+
+	* lt.po: Updated Lithuanian translation.
+
 2007-02-22  Abel Cheung  <abelcheung@gmail.com>
 
 	* zh_CN.po: Updated simplified Chinese translation on behalf of
