--- a/po/vi.po
+++ b/po/vi.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Nautilus 2.14.0 HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-10-20 07:47+0200\n"
-"PO-Revision-Date: 2007-01-28 10:45+0700\n"
+"PO-Revision-Date: 2007-02-24 12:36+0700\n"
 "Last-Translator: Clytie Siddall <clytie@riverland.net.au>\n"
 "Language-Team: Vietnamese <gnomevi-list@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -1532,7 +1532,7 @@ msgstr " (bản sao)"
 #. localizers: tag used to detect the second copy of a file
 #: ../libnautilus-private/nautilus-file-operations.c:1360
 msgid " (another copy)"
-msgstr " (một bản sao khác)"
+msgstr " (bản sao khác)"
 
 #. localizers: tag used to detect the x11th copy of a file
 #. localizers: tag used to detect the x12th copy of a file
@@ -1543,22 +1543,22 @@ msgstr " (một bản sao khác)"
 #: ../libnautilus-private/nautilus-file-operations.c:1367
 #: ../libnautilus-private/nautilus-file-operations.c:1377
 msgid "th copy)"
-msgstr " bản sao thứ )"
+msgstr "(bản sao"
 
 #. localizers: tag used to detect the x1st copy of a file
 #: ../libnautilus-private/nautilus-file-operations.c:1370
 msgid "st copy)"
-msgstr " bản sao thứ )"
+msgstr "(bản sao"
 
 #. localizers: tag used to detect the x2nd copy of a file
 #: ../libnautilus-private/nautilus-file-operations.c:1372
 msgid "nd copy)"
-msgstr " bản sao thứ )"
+msgstr "(bản sao"
 
 #. localizers: tag used to detect the x3rd copy of a file
 #: ../libnautilus-private/nautilus-file-operations.c:1374
 msgid "rd copy)"
-msgstr " bản sao thứ )"
+msgstr "(bản sao"
 
 #. localizers: appended to first file copy
 #: ../libnautilus-private/nautilus-file-operations.c:1391
@@ -1570,7 +1570,7 @@ msgstr "%s (bản sao)%s"
 #: ../libnautilus-private/nautilus-file-operations.c:1393
 #, c-format
 msgid "%s (another copy)%s"
-msgstr "%s (một bản sao khác)%s"
+msgstr "%s (bản sao khác)%s"
 
 #. localizers: appended to x11th file copy
 #. localizers: appended to x12th file copy
