--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-24  Nguyễn Thái Ngọc Duy  <pclouds@gmail.com>
+
+	* vi.po: Updated Vietnamese translation.
+
 2007-02-23  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Updated Norwegian bokmål translation.
