--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-25  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>
+
+	* ca.po: Updated Catalan translation.
+
 2007-02-24  Nguyễn Thái Ngọc Duy  <pclouds@gmail.com>
 
 	* vi.po: Updated Vietnamese translation.
