--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-02-26  Alexander Larsson  <alexl@redhat.com>
+
+        * libnautilus-private/nautilus-file.c:
+	Avoid asserting when the symbolic link hastable isn't
+	uptodate (#358172)
+	Store absolute uris, not relative paths in symbolic link
+	hashtable.
+
 2007-02-21  Christian Persch  <chpe@svn.gnome.org>
 
 	* src/file-manager/fm-list-view.c: (create_and_set_up_tree_view):
