--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-02-26  Alexander Larsson  <alexl@redhat.com>
 
+        * src/nautilus-connect-server-dialog.c:
+	Don't show unsupported methods. (#333151)
+	Patch from Christian Neumair.
+
+2007-02-26  Alexander Larsson  <alexl@redhat.com>
+
         * libnautilus-private/nautilus-file.c:
 	Avoid asserting when the symbolic link hastable isn't
 	uptodate (#358172)
