Update for release
2007-02-26  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release


svn path=/trunk/; revision=12771

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Major changes in 2.17.92 are:
+* Don't display homedir as "desktop" in pathbar when in home-as-desktop mode
+* Use GtkLabel ellipsizing
+* Ellipsize filename column in list view
+* Don't show unsupported methods in connect-to-server dialog
+* Fix crashes
+
 Major changes in 2.17.91 are:
 * Change file management capplet category
 * Avoid showing "empty" in the tree while loading directory
