--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2007-02-26  Alexander Larsson  <alexl@redhat.com>
 
+	* NEWS:
+	Update for release
+
+2007-02-26  Alexander Larsson  <alexl@redhat.com>
+
         * cut-n-paste-code/widgets/Makefile.am:
         * cut-n-paste-code/widgets/gimphwrapbox/Makefile.am: Removed.
         * cut-n-paste-code/widgets/gimphwrapbox/gtkhwrapbox.c: Removed.
