--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-02-26  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.17.92 ===
+	
+2007-02-26  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release
 
