--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,5 @@
+=== nautilus 2.17.92 ===
+	
 2007-02-25  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>
 
 	* ca.po: Updated Catalan translation.
