--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-02-26  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* fr.po: Fixed French translation by Christophe Bliard and
+	Stéphane Raimbault.
+
 === nautilus 2.17.92 ===
 	
 2007-02-25  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>
