--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-27  Hendrik Richter  <hendrikr@gnome.org>
+
+	* de.po: Updated German translation.
+
 2007-02-27  Jakub Friedl  <jfriedl@suse.cz>
 
 	* cs.po: Updated Czech translation.
