sv.po: Swedish translation updated
svn path=/trunk/; revision=12778

--- a/po/sv.po
+++ b/po/sv.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-02-07 03:32+0000\n"
-"PO-Revision-Date: 2007-02-07 13:01+0100\n"
+"POT-Creation-Date: 2007-02-07 12:09+0000\n"
+"PO-Revision-Date: 2007-02-28 22:37+0100\n"
 "Last-Translator: Daniel Nylander <po@danielnylander.se>\n"
 "Language-Team: Swedish <tp-sv@listor.tp-sv.se>\n"
 "MIME-Version: 1.0\n"
@@ -4739,13 +4739,13 @@ msgstr "Lägg till ett bokmärke för den aktuella platsen till denna meny"
 #: ../src/nautilus-navigation-window-menus.c:443
 #: ../src/nautilus-spatial-window.c:863
 msgid "_Edit Bookmarks"
-msgstr "_Redigera bokmärken"
+msgstr "R_edigera bokmärken"
 
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:444
 #: ../src/nautilus-spatial-window.c:864
 msgid "Display a window that allows editing the bookmarks in this menu"
-msgstr "Visa ett fönster som tillåter redigering av bokmärkena i denna meny"
+msgstr "Visa ett fönster som tillåter redigering av dina bokmärken i denna meny"
 
 #: ../src/nautilus-navigation-window-menus.c:446
 #: ../src/nautilus-spatial-window.c:866
@@ -5310,7 +5310,7 @@ msgstr "_Arkiv"
 #. name, stock id, label
 #: ../src/nautilus-window-menus.c:587
 msgid "_Edit"
-msgstr "_Redigera"
+msgstr "R_edigera"
 
 #. name, stock id, label
 #: ../src/nautilus-window-menus.c:588
