--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-03-02  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-list-view.c (create_and_set_up_tree_view):
+	Don't make filename column expand, instead default
+	to 16 chars wide. (#408155)
+
 2007-02-26  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
