--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-03	Guillaume Savaton <llumeao@gmail.com>
+
+	* eo.po: Added Esperanto translation.
+
 2007-02-28  Daniel Nylander <po@danielnylander.se>
 
 	* sv.po: Updated Swedish translation.
