--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-03  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Reinout van Schouwen.
+
 2007-03-03	Guillaume Savaton <llumeao@gmail.com>
 
 	* eo.po: Added Esperanto translation.
