--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-04  Erdal Ronahi  <erdal dot ronahi at gmail dot com>
+
+	* ku.po: Updated Kurdish translation
+
 2007-03-04  Thierry Randrianiriana  <randrianiriana@gmaial.com>
 
 	* mg.po: Updated Malagasy translation.
