Update Ukrainian translation.
2007-03-05 Maxim Dziumanenko <dziumanenko@gmail.com>

	* Update Ukrainian translation.


svn path=/trunk/; revision=12789

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-05 Maxim Dziumanenko <dziumanenko@gmail.com>
+
+	* uk.po: Update Ukrainian translation.
+
 2007-03-04  Erdal Ronahi  <erdal dot ronahi at gmail dot com>
 
 	* ku.po: Updated Kurdish translation
