--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-05 Goran Rakić <grakic@devbase.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
 2007-03-05 Maxim Dziumanenko <dziumanenko@gmail.com>
 
 	* uk.po: Update Ukrainian translation.
