--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-06  Ankit Patel  <ankit644@yahoo.com>
+
+	* gu.po: Updated Gujarati Translation.
+
 2007-03-05 Goran Rakić <grakic@devbase.net>
 
 	* sr.po, sr@Latn.po: Updated Serbian translation.
