Updated Czech translation.
2007-03-08  Jakub Friedl  <jfriedl@suse.cz>

  * cs.po: Updated Czech translation.



svn path=/trunk/; revision=12792

--- a/po/cs.po
+++ b/po/cs.po
@@ -1,4 +1,3 @@
-# translation of cs.po to Czech
 # translation of cs.po to
 # Czech translation of Nautilus
 # Copyright (C) 2001, 2003, 2006, 2007 Free Software Foundation, Inc.
@@ -16,10 +15,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: cs\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-02-27 13:24+0100\n"
-"PO-Revision-Date: 2007-02-27 13:24+0100\n"
+"POT-Creation-Date: 2007-03-08 10:30+0100\n"
+"PO-Revision-Date: 2007-03-08 10:34+0100\n"
 "Last-Translator: Jakub Friedl <jfriedl@suse.cz>\n"
-"Language-Team: Czech <gnome-cs-list@gnome.org>\n"
+"Language-Team:  <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -474,8 +473,7 @@ msgstr ""
 "strom složek. V opačném případě bude zobrazovat složky i soubory."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:34
-msgid ""
-"If set to true, newly opened windows will have the location bar visible."
+msgid "If set to true, newly opened windows will have the location bar visible."
 msgstr ""
 "Je-li nastaveno na true, budou mít nově otevřená okna viditelnou lištu "
 "umístění."
@@ -533,8 +531,7 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:42
 msgid "If set to true, then Nautilus will draw the icons on the desktop."
-msgstr ""
-"Je-li nastaveno na true, bude Nautilus kreslit ikony na pracovní ploše."
+msgstr "Je-li nastaveno na true, bude Nautilus kreslit ikony na pracovní ploše."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:43
 msgid ""
@@ -647,12 +644,10 @@ msgstr ""
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:55
 msgid "If true, icons will be laid out tighter by default in new windows."
-msgstr ""
-"Je-li true, budou jmenovky v nových oknech implicitně rozloženy kompaktněji."
+msgstr "Je-li true, budou jmenovky v nových oknech implicitně rozloženy kompaktněji."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:56
-msgid ""
-"If true, labels will be placed beside icons rather than underneath them."
+msgid "If true, labels will be placed beside icons rather than underneath them."
 msgstr "Je-li true, budou jmenovky umístěny vedle ikon místo pod nimi."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:57
@@ -842,8 +837,7 @@ msgstr "Popis písma používaného pro ikony na pracovní ploše."
 msgid ""
 "The format of file dates. Possible values are \"locale\", \"iso\", and "
 "\"informal\"."
-msgstr ""
-"Formát dat souborů. Možné hodnoty jsou \"locale\", \"iso\" a \"informal\"."
+msgstr "Formát dat souborů. Možné hodnoty jsou \"locale\", \"iso\" a \"informal\"."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:91
 msgid "The side pane view to show in newly opened windows."
@@ -1009,7 +1003,7 @@ msgid "Use De_fault"
 msgstr "_Používat výchozí"
 
 #: ../libnautilus-private/nautilus-column-utilities.c:43
-#: ../src/file-manager/fm-list-view.c:1375
+#: ../src/file-manager/fm-list-view.c:1374
 msgid "Name"
 msgstr "Název"
 
@@ -1106,7 +1100,7 @@ msgstr "Vymazat"
 
 #: ../libnautilus-private/nautilus-desktop-directory-file.c:443
 #: ../libnautilus-private/nautilus-desktop-icon-file.c:163
-#: ../libnautilus-private/nautilus-trash-file.c:691
+#: ../libnautilus-private/nautilus-trash-file.c:692
 msgid "on the desktop"
 msgstr "na ploše"
 
@@ -1176,8 +1170,7 @@ msgid "Sorry, but you must specify a non-blank keyword for the new emblem."
 msgstr "Lituji, ale musíte zadat neprázdné klíčové slovo pro nový emblém."
 
 #: ../libnautilus-private/nautilus-emblem-utils.c:204
-msgid ""
-"Sorry, but emblem keywords can only contain letters, spaces and numbers."
+msgid "Sorry, but emblem keywords can only contain letters, spaces and numbers."
 msgstr ""
 "Lituji, ale klíčová slova emblémů mohou obsahovat jen písmena, mezery a "
 "čísla."
@@ -1258,8 +1251,7 @@ msgstr "Chyba při odstraňování."
 msgid ""
 "\"%s\" cannot be deleted because you do not have permissions to modify its "
 "parent folder."
-msgstr ""
-"\"%s\" nelze odstranit, protože nemáte oprávnění měnit nadřazenou složku."
+msgstr "\"%s\" nelze odstranit, protože nemáte oprávnění měnit nadřazenou složku."
 
 #: ../libnautilus-private/nautilus-file-operations.c:689
 #, c-format
@@ -1460,8 +1452,7 @@ msgstr ""
 
 #: ../libnautilus-private/nautilus-file-operations.c:1197
 #, c-format
-msgid ""
-"The file already exists in \"%s\".  Replacing it will overwrite its contents."
+msgid "The file already exists in \"%s\".  Replacing it will overwrite its contents."
 msgstr "Soubor již existuje v \"%s\". Jeho nahrazením přepíšete jeho obsah."
 
 #: ../libnautilus-private/nautilus-file-operations.c:1214
@@ -2235,7 +2226,7 @@ msgid "Icon View"
 msgstr "Ikonový pohled"
 
 #: ../libnautilus-private/nautilus-global-preferences.c:147
-#: ../src/file-manager/fm-list-view.c:1432
+#: ../src/file-manager/fm-list-view.c:1431
 msgid "List View"
 msgstr "Seznamový pohled"
 
@@ -2412,8 +2403,7 @@ msgstr "Nemohu zobrazit \"%s\", protože nebyl nalezen počítač \"%s\"."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:611
 #: ../src/nautilus-window-manage-views.c:1519
-msgid ""
-"Check that the spelling is correct and that your proxy settings are correct."
+msgid "Check that the spelling is correct and that your proxy settings are correct."
 msgstr " Zkontrolujte překlepy a vaše nastavení proxy."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:616
@@ -2464,8 +2454,7 @@ msgid "This drop target only supports local files."
 msgstr "Tento cíl upuštění podporuje jen místní soubory."
 
 #: ../libnautilus-private/nautilus-program-choosing.c:943
-msgid ""
-"To open non-local files copy them to a local folder and then drop them again."
+msgid "To open non-local files copy them to a local folder and then drop them again."
 msgstr ""
 "Vzdálené soubory můžete otevřít jejich zkopírováním do místní složky a "
 "jejich následném opuštění."
@@ -2507,13 +2496,12 @@ msgstr "Opakovat vrácenou úpravu"
 
 #. label, accelerator
 #: ../nautilus-computer.desktop.in.in.h:1 ../src/nautilus-window-menus.c:661
-msgid ""
-"Browse all local and remote disks and folders accessible from this computer"
-msgstr ""
+msgid "Browse all local and remote disks and folders accessible from this computer"
+msgstr "Procházet všechny místní a vzdálené disky a složky dostupné z tohoto počítače"
 
 #: ../nautilus-file-management-properties.desktop.in.in.h:1
 msgid "Change the behaviour and appearance of file manager windows"
-msgstr ""
+msgstr "Změnit chování a vzhled oken správce souborů"
 
 #: ../nautilus-file-management-properties.desktop.in.in.h:2
 msgid "File Management"
@@ -2598,8 +2586,7 @@ msgstr "Změnit _pozadí plochy"
 
 #. tooltip
 #: ../src/file-manager/fm-desktop-icon-view.c:701
-msgid ""
-"Show a window that lets you set your desktop background's pattern or color"
+msgid "Show a window that lets you set your desktop background's pattern or color"
 msgstr ""
 "Zobrazit okno, které vám umožní nastavit vzor nebo barvu pozadí pracovní "
 "plochy"
@@ -2660,8 +2647,7 @@ msgstr "Jste si jisti, že chcete natrvalo odstranit \"%s\"?"
 #: ../src/file-manager/fm-directory-view.c:1004
 #, c-format
 msgid "Are you sure you want to permanently delete the %d selected item?"
-msgid_plural ""
-"Are you sure you want to permanently delete the %d selected items?"
+msgid_plural "Are you sure you want to permanently delete the %d selected items?"
 msgstr[0] "Jste si jisti, že chcete natrvalo odstranit %d vybranou položku?"
 msgstr[1] "Jste si jisti, že chcete natrvalo odstranit %d vybrané položky?"
 msgstr[2] "Jste si jisti, že chcete natrvalo odstranit %d vybraných položek?"
@@ -2779,8 +2765,7 @@ msgstr "%s%s, %s"
 #: ../src/file-manager/fm-directory-view.c:2360
 #, c-format
 msgid "The folder \"%s\" contains more files than Nautilus can handle."
-msgstr ""
-"Složka \"%s\" obsahuje více souborů, než kolik jich Nautilusdokáže zpracovat."
+msgstr "Složka \"%s\" obsahuje více souborů, než kolik jich Nautilusdokáže zpracovat."
 
 #: ../src/file-manager/fm-directory-view.c:2366
 msgid "Some files will not be displayed."
@@ -2805,8 +2790,7 @@ msgid "None of the %d selected items can be moved to the Trash"
 msgstr "Žádnou z %d vybraných položek nelze přesunout do koše"
 
 #: ../src/file-manager/fm-directory-view.c:3832
-msgid ""
-"Cannot move some items to trash, do you want to delete these immediately?"
+msgid "Cannot move some items to trash, do you want to delete these immediately?"
 msgstr "Nemohu přesunout některé položky do koše, chcete je odstranit ihned?"
 
 #: ../src/file-manager/fm-directory-view.c:3833
@@ -2827,12 +2811,9 @@ msgid ""
 msgid_plural ""
 "Are you sure you want to permanently delete the %d selected items from the "
 "trash?"
-msgstr[0] ""
-"Jste si jisti, že chcete z koše natrvalo odstranit %d vybranou položku?"
-msgstr[1] ""
-"Jste si jisti, že chcete z koše natrvalo odstranit %d vybrané položky?"
-msgstr[2] ""
-"Jste si jisti, že chcete z koše natrvalo odstranit %d vybraných položek?"
+msgstr[0] "Jste si jisti, že chcete z koše natrvalo odstranit %d vybranou položku?"
+msgstr[1] "Jste si jisti, že chcete z koše natrvalo odstranit %d vybrané položky?"
+msgstr[2] "Jste si jisti, že chcete z koše natrvalo odstranit %d vybraných položek?"
 
 #: ../src/file-manager/fm-directory-view.c:3886
 msgid "If you delete an item, it will be permanently lost."
@@ -2917,8 +2898,7 @@ msgstr "Všechny spustitelné soubory z této složky se objeví v nabídce Skri
 msgid ""
 "Choosing a script from the menu will run that script with any selected items "
 "as input."
-msgstr ""
-"Výběr skriptu z této nabídky spustí skript s vybranými položkami jako vstup."
+msgstr "Výběr skriptu z této nabídky spustí skript s vybranými položkami jako vstup."
 
 #: ../src/file-manager/fm-directory-view.c:5865
 msgid ""
@@ -2975,8 +2955,7 @@ msgstr "\"%s\" bude zkopírován, pokud vyberete příkaz Vložit"
 #: ../src/file-manager/fm-directory-view.c:6040
 #, c-format
 msgid "The %d selected item will be moved if you select the Paste command"
-msgid_plural ""
-"The %d selected items will be moved if you select the Paste command"
+msgid_plural "The %d selected items will be moved if you select the Paste command"
 msgstr[0] "%d vybraná položka bude přesunuta, pokud vyberete příkaz Vložit"
 msgstr[1] "%d vybrané položky budou přesunuty, pokud vyberete příkaz Vložit"
 msgstr[2] "%d vybraných položek bude přesunuto, pokud vyberete příkaz Vložit"
@@ -2984,8 +2963,7 @@ msgstr[2] "%d vybraných položek bude přesunuto, pokud vyberete příkaz Vlož
 #: ../src/file-manager/fm-directory-view.c:6047
 #, c-format
 msgid "The %d selected item will be copied if you select the Paste command"
-msgid_plural ""
-"The %d selected items will be copied if you select the Paste command"
+msgid_plural "The %d selected items will be copied if you select the Paste command"
 msgstr[0] "%d vybraná položka bude zkopírována, pokud vyberete příkaz Vložit"
 msgstr[1] "%d vybrané položky budou zkopírovány, pokud vyberete příkaz Vložit"
 msgstr[2] "%d vybraných položek bude zkopírováno, pokud vyberete příkaz Vložit"
@@ -3234,8 +3212,7 @@ msgstr "Obnovit pohled na _výchozí"
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6924
 msgid "Reset sorting order and zoom level to match preferences for this view"
-msgstr ""
-"Obnovit pořadí řazení a úroveň zvětšení podle nastavení pro tento pohled"
+msgstr "Obnovit pořadí řazení a úroveň zvětšení podle nastavení pro tento pohled"
 
 #. name, stock id
 #: ../src/file-manager/fm-directory-view.c:6927
@@ -3523,8 +3500,7 @@ msgstr "Spouštěč"
 
 #: ../src/file-manager/fm-error-reporting.c:60
 #, c-format
-msgid ""
-"You do not have the permissions necessary to view the contents of \"%s\"."
+msgid "You do not have the permissions necessary to view the contents of \"%s\"."
 msgstr "Nemáte oprávnění potřebná k prohlížení obsahu \"%s\"."
 
 #: ../src/file-manager/fm-error-reporting.c:64
@@ -3543,16 +3519,13 @@ msgstr "Obsah složky nebylo možné zobrazit."
 
 #: ../src/file-manager/fm-error-reporting.c:108
 #, c-format
-msgid ""
-"The name \"%s\" is already used in this folder. Please use a different name."
+msgid "The name \"%s\" is already used in this folder. Please use a different name."
 msgstr "Název \"%s\" je v této složce již použit. Použijte prosím jiný název."
 
 #: ../src/file-manager/fm-error-reporting.c:113
 #, c-format
-msgid ""
-"There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
-msgstr ""
-"\"%s\" v této složce neexistuje. Možná byl právě přesunut či odstraněn?"
+msgid "There is no \"%s\" in this folder. Perhaps it was just moved or deleted?"
+msgstr "\"%s\" v této složce neexistuje. Možná byl právě přesunut či odstraněn?"
 
 #: ../src/file-manager/fm-error-reporting.c:118
 #, c-format
@@ -3589,15 +3562,13 @@ msgstr "Položka nemohla být přejmenována."
 
 #: ../src/file-manager/fm-error-reporting.c:169
 #, c-format
-msgid ""
-"You do not have the permissions necessary to change the group of \"%s\"."
+msgid "You do not have the permissions necessary to change the group of \"%s\"."
 msgstr "Nemáte oprávnění potřebná ke změně skupiny \"%s\"."
 
 #: ../src/file-manager/fm-error-reporting.c:173
 #, c-format
 msgid "Couldn't change the group of \"%s\" because it is on a read-only disk"
-msgstr ""
-"Nemohu změnit skupinu \"%s\", protože je na disku připojeném jen ke čtení"
+msgstr "Nemohu změnit skupinu \"%s\", protože je na disku připojeném jen ke čtení"
 
 #: ../src/file-manager/fm-error-reporting.c:181
 #, c-format
@@ -3611,8 +3582,7 @@ msgstr "Skupina nemohla být změněna."
 #: ../src/file-manager/fm-error-reporting.c:207
 #, c-format
 msgid "Couldn't change the owner of \"%s\" because it is on a read-only disk"
-msgstr ""
-"Nemohu změnit vlastníka \"%s\", protože je na disku připojeném jen ke čtení"
+msgstr "Nemohu změnit vlastníka \"%s\", protože je na disku připojeném jen ke čtení"
 
 #: ../src/file-manager/fm-error-reporting.c:214
 #, c-format
@@ -3625,10 +3595,8 @@ msgstr "Vlastník nemohl být změněn."
 
 #: ../src/file-manager/fm-error-reporting.c:239
 #, c-format
-msgid ""
-"Couldn't change the permissions of \"%s\" because it is on a read-only disk"
-msgstr ""
-"Nemohu změnit oprávnění \"%s\", protože je na disku připojeném jen ke čtení"
+msgid "Couldn't change the permissions of \"%s\" because it is on a read-only disk"
+msgstr "Nemohu změnit oprávnění \"%s\", protože je na disku připojeném jen ke čtení"
 
 #: ../src/file-manager/fm-error-reporting.c:246
 #, c-format
@@ -3826,46 +3794,46 @@ msgstr "(Prázdné)"
 msgid "Loading..."
 msgstr "Načítám..."
 
-#: ../src/file-manager/fm-list-view.c:1961
+#: ../src/file-manager/fm-list-view.c:1960
 #, c-format
 msgid "%s Visible Columns"
 msgstr "Viditelné sloupce %s"
 
-#: ../src/file-manager/fm-list-view.c:1980
+#: ../src/file-manager/fm-list-view.c:1979
 msgid "Choose the order of information to appear in this folder."
 msgstr "Zvolte pořadí informací, které se objeví v této složce."
 
 #. name, stock id
-#: ../src/file-manager/fm-list-view.c:2022
+#: ../src/file-manager/fm-list-view.c:2021
 msgid "Visible _Columns..."
 msgstr "Viditelné _sloupce..."
 
 #. label, accelerator
-#: ../src/file-manager/fm-list-view.c:2023
+#: ../src/file-manager/fm-list-view.c:2022
 msgid "Select the columns visible in this folder"
 msgstr "Vyberte sloupce viditelné v této složce"
 
-#: ../src/file-manager/fm-list-view.c:2746
+#: ../src/file-manager/fm-list-view.c:2743
 msgid "List"
 msgstr "Seznam"
 
-#: ../src/file-manager/fm-list-view.c:2747
+#: ../src/file-manager/fm-list-view.c:2744
 msgid "View as List"
 msgstr "Zobrazit jako seznam"
 
-#: ../src/file-manager/fm-list-view.c:2748
+#: ../src/file-manager/fm-list-view.c:2745
 msgid "View as _List"
 msgstr "Zobrazit jako _seznam"
 
-#: ../src/file-manager/fm-list-view.c:2749
+#: ../src/file-manager/fm-list-view.c:2746
 msgid "The list view encountered an error."
 msgstr "V seznamovém pohledu došlo k chybě."
 
-#: ../src/file-manager/fm-list-view.c:2750
+#: ../src/file-manager/fm-list-view.c:2747
 msgid "The list view encountered an error while starting up."
 msgstr "V seznamovém pohledu došlo při startu k chybě."
 
-#: ../src/file-manager/fm-list-view.c:2751
+#: ../src/file-manager/fm-list-view.c:2748
 msgid "Display this location with the list view."
 msgstr "Zobrazit toto umístění v seznamovém pohledu."
 
@@ -5039,8 +5007,7 @@ msgstr "[URI...]"
 msgid ""
 "Load a saved session from the specified file. Implies \"--no-default-window"
 "\"."
-msgstr ""
-"Načíst uložené sezení ze zadaného souboru. Implikuje \"--no-default-window\"."
+msgstr "Načíst uložené sezení ze zadaného souboru. Implikuje \"--no-default-window\"."
 
 #: ../src/nautilus-main.c:393
 msgid "FILENAME"
@@ -5651,8 +5618,7 @@ msgstr "Pohled na aktuální složku"
 
 #: ../src/nautilus-window-manage-views.c:1458
 msgid "Nautilus has no installed viewer capable of displaying the folder."
-msgstr ""
-"Nautilus nemá nainstalován žádný prohlížeč umožňující zobrazit tuto složku."
+msgstr "Nautilus nemá nainstalován žádný prohlížeč umožňující zobrazit tuto složku."
 
 #: ../src/nautilus-window-manage-views.c:1464
 msgid "The location is not a folder."
@@ -5906,7 +5872,7 @@ msgstr "_Síť"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:665 ../src/network-scheme.desktop.in.h:1
 msgid "Browse bookmarked and local network locations"
-msgstr ""
+msgstr "Procházet založená a místní síťová umístění"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:668
@@ -5915,9 +5881,8 @@ msgstr "Š_ablony"
 
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:669
-#, fuzzy
 msgid "Open your personal templates folder"
-msgstr "Přejít do složky šablon"
+msgstr "Otevřít vaši osobní složku šablon"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:672
@@ -5926,9 +5891,8 @@ msgstr "_Koš"
 
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:673
-#, fuzzy
 msgid "Open your personal trash folder"
-msgstr "Otevřít nadřazenou složku"
+msgstr "Otevřít vaši osobní složku koše"
 
 #. name, stock id
 #: ../src/nautilus-window-menus.c:676
@@ -5938,7 +5902,7 @@ msgstr "Tvůrce CD/_DVD"
 #. label, accelerator
 #: ../src/nautilus-window-menus.c:677
 msgid "Open a folder into which you can drag files to burn to a CD or DVD"
-msgstr ""
+msgstr "Otevřít složku pro přetahování souborů určených k vypálení na CD či DVD"
 
 #: ../src/nautilus-window-menus.c:703
 msgid "_Up"
@@ -5971,3 +5935,4 @@ msgstr "Zvětšení"
 #: ../src/nautilus-zoom-control.c:807
 msgid "Set the zoom level of the current view"
 msgstr "Nastavit úroveň zvětšení aktuálního pohledu"
+
