"Application" is not a valid category in the freedesktop.org
        * src/network-scheme.desktop.in:
        * nautilus-computer.desktop.in.in:
        * nautilus.desktop.in.in:
        * nautilus-home.desktop.in.in:
        * nautilus-file-management-properties.desktop.in.in:    
        "Application" is not a valid category in the freedesktop.org
        specification. Also added GNOME and/or GTK where appropriate.

svn path=/trunk/; revision=12793

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2007-03-08  Christian Kirbach  <Christian.Kirbach@googlemail.com>
+
+        * src/network-scheme.desktop.in:
+	* nautilus-computer.desktop.in.in:
+	* nautilus.desktop.in.in:
+	* nautilus-home.desktop.in.in:
+	* nautilus-file-management-properties.desktop.in.in:	
+        "Application" is not a valid category in the freedesktop.org
+	specification. Also added GNOME and/or GTK where appropriate.
+
 2007-03-02  Alexander Larsson  <alexl@redhat.com>
 
         * libnautilus-private/nautilus-file.c:
