--- a/po/hu.po
+++ b/po/hu.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus.HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-02-07 03:32+0000\n"
-"PO-Revision-Date: 2007-02-12 20:46+0100\n"
+"POT-Creation-Date: 2007-02-12 19:50+0000\n"
+"PO-Revision-Date: 2007-03-11 14:05+0100\n"
 "Last-Translator: Gabor Kelemen <kelemeng@gnome.hu>\n"
 "Language-Team: Hungarian <gnome@gnome.hu>\n"
 "MIME-Version: 1.0\n"
@@ -527,7 +527,7 @@ msgid ""
 "If set to true, then Nautilus will ask for confirmation when you attempt to "
 "put files in the trash."
 msgstr ""
-"Ha be van kapcsolva, akkor a Nautilus megerősítést kér, amikor ön fájlokat "
+"Ha be van kapcsolva, akkor a Nautilus megerősítést kér, amikor fájlokat "
 "kísérel meg áthelyezni a kukába."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:42
@@ -540,8 +540,8 @@ msgid ""
 "file immediately and in-place, instead of moving it to the trash. This "
 "feature can be dangerous, so use caution."
 msgstr ""
-"Ha be van kapcsolva, akkor a Nautilus engedélyezi önnek a fájlok azonnali, "
-"helyben történő törlését, ahelyett, hogy a Kukába helyezné át őket. Ez a "
+"Ha be van kapcsolva, akkor a Nautilus engedélyezi a fájlok azonnali, "
+"helyben történő törlését, ahelyett, hogy a Kukába helyezné át azokat. Ez a "
 "szolgáltatás veszélyes lehet, ezért óvatosan használja."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:44
@@ -1840,8 +1840,8 @@ msgid ""
 "In order to regain the free space on this device the trash must be emptied. "
 "All items in the trash will be permanently lost. "
 msgstr ""
-"A szabad hely visszanyerése érdekében az eszközön ki kell üríteni a Kukát. "
-"A Kuka összes elem véglegesen elvész."
+"A szabad hely visszanyerése érdekében az eszközön ki kell üríteni a Kukát. A "
+"Kuka összes elem véglegesen elvész."
 
 #: ../libnautilus-private/nautilus-file-operations.c:3026
 msgid "Don't Empty Trash"
@@ -2097,7 +2097,7 @@ msgid ""
 "some other reason."
 msgstr ""
 "Még az \"x-directory/normal\"-hoz sem található leírás. Ez valószínűleg azt "
-"jelenti, hogy az ön gnome-vfs.keys fájlja rossz helyen van, vagy valamiért a "
+"jelenti, hogy a gnome-vfs.keys fájlja rossz helyen van, vagy valamiért a "
 "Nautilus nem találja meg."
 
 #: ../libnautilus-private/nautilus-file.c:4787
@@ -4143,7 +4143,7 @@ msgstr "Szövegnézet:"
 
 #: ../src/file-manager/fm-properties-window.c:4179
 msgid "You are not the owner, so you can't change these permissions."
-msgstr "Nem módosíthatja a jogosultságokat, mivel nem ön a fájl tulajdonosa."
+msgstr "Nem módosíthatja a jogosultságokat, mivel nem Ön a fájl tulajdonosa."
 
 #: ../src/file-manager/fm-properties-window.c:4202
 msgid "SELinux Context:"
@@ -4502,7 +4502,7 @@ msgid ""
 "This is probably because the emblem is a permanent one, and not one that you "
 "added yourself."
 msgstr ""
-"Ez talán azért lehet, mert a matrica állandó, és nem olyan, amit ön hozott "
+"Ez valószínűleg azért lehet, mert a matrica állandó és nem Ön hozta "
 "létre."
 
 #: ../src/nautilus-emblem-sidebar.c:275
