--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-11  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Translation updated.
+
 2007-03-08  Jakub Friedl  <jfriedl@suse.cz>
 
 	* cs.po: Updated Czech translation.
