Update for release
2007-03-12  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release

	* configure.in:
	Bump version to 2.18.--This


svn path=/trunk/; revision=12795

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2007-03-12  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for release
+
+	* configure.in:
+	Bump version to 2.18.0
+
 2007-03-08  Christian Kirbach  <Christian.Kirbach@googlemail.com>
 
         * src/network-scheme.desktop.in:
