--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Major changes in 2.18.0 are:
+* Fix up desktop file categories
+* Some sparse code cleanups
+* Don't make filename column expand
+
 Major changes in 2.17.92 are:
 * Don't display homedir as "desktop" in pathbar when in home-as-desktop mode
 * Use GtkLabel ellipsizing
