Set version to 2.18.0.1
2007-03-12  Alexander Larsson  <alexl@redhat.com>

        * configure.in:
	Set version to 2.18.0.1
	
        * libnautilus-private/nautilus-file-utilities.c:
        * libnautilus-private/nautilus-file-utilities.h:
        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-signaller.c:
        * src/file-manager/fm-directory-view.c:
	Revert accidental commit.


svn path=/trunk/; revision=12798

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 2007-03-12  Alexander Larsson  <alexl@redhat.com>
 
+        * configure.in:
+	Set version to 2.18.0.1
+	
+        * libnautilus-private/nautilus-file-utilities.c:
+        * libnautilus-private/nautilus-file-utilities.h:
+        * libnautilus-private/nautilus-file.c:
+        * libnautilus-private/nautilus-signaller.c:
+        * src/file-manager/fm-directory-view.c:
+	Revert accidental commit.
+
+2007-03-12  Alexander Larsson  <alexl@redhat.com>
+
 	* configure.in:
 	Post release version bump
 
