Update for release
2007-03-12  Alexander Larsson  <alexl@redhat.com>

	* NEWS:
	Update for release


svn path=/trunk/; revision=12799

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2007-03-12  Alexander Larsson  <alexl@redhat.com>
 
+	* NEWS:
+	Update for release
+
         * configure.in:
 	Set version to 2.18.0.1
 	
