--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Major changes in 2.18.0.1 are:
+* Reverted accidental commit
+
 Major changes in 2.18.0 are:
 * Fix up desktop file categories
 * Some sparse code cleanups
