--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2007-03-12  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Post release version bump
+
+=== nautilus 2.18.0.1 ===
+	
+2007-03-12  Alexander Larsson  <alexl@redhat.com>
+
 	* NEWS:
 	Update for release
 
