Add open and open in new window to places sidebar context menu. Patch from
2007-03-14  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-places-sidebar.c:
	Add open and open in new window to places sidebar context menu.
	Patch from Stefano Teso


svn path=/trunk/; revision=12803

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2007-03-14  Alexander Larsson  <alexl@redhat.com>
 
+        * src/nautilus-places-sidebar.c:
+	Add open and open in new window to places sidebar context menu.
+	Patch from Stefano Teso
+
+2007-03-14  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-directory-view.c (schedule_update_menus)
 	(schedule_update_status):
 	Make sure we never schedule an update after the window has been
