Added Entry for Bengali India Translation Updation
svn path=/trunk/; revision=12805

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,8 @@
 === nautilus 2.18.0 ===
+2007-03-14  Runa Bhattacharjee <runabh@gmail.com>
+
+	* bn_IN.po: Updated Bengali India Translation.
+
 	
 2007-03-11  Gabor Kelemen  <kelemeng@gnome.hu>
 
