--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-15  Ankit Patel  <ankit644@yahoo.com>
+
+	* gu.po: Updated Gujarati Translation.
+
 === nautilus 2.18.0 ===
 2007-03-14  Runa Bhattacharjee <runabh@gmail.com>
 
